# co-lama

./: .gitignore  Makefile  README.md  colama.py  lama.icns  path.txt  pyproject.toml  requirements.txt  setup.py
Formula/: co-lama.rb
colama/: __init__.py  main.py
colama/services/: __init__.py  docker_service.py
colama/ui/: __init__.py  menu_bar.py
